view encapsulation sucks

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
       </ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content [fullscreen]="true" padding="none" margin="none">
+  <ion-content>
 
       <!-- if user is registered -->
 
@@ -24,7 +24,7 @@
         <ion-card-content>
           <div class="hello-div">
             <ion-card-title>Hi, {{username}}!</ion-card-title>
-            <small>Welcome to the feta.</small>
+            <small>Welcome to feta.</small>
           </div>
         </ion-card-content>
       </ion-card>
