--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -127,6 +127,7 @@ ion-icon {
         .stats-text {
             font-size: 0.65em;
             margin: -0.5em auto;
+            font-weight: 600;
         }
     }
 
