--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,6 +1,5 @@
 <ion-tabs mode="ios">
-
-  <ion-tab-bar class="footer-scroll">
+  <ion-tab-bar class="footer-scroll" slot="bottom">
     <ion-tab-button (click)="homeClick()" tab="home">
       <ion-icon *ngIf="!homeclick" name="home-outline"></ion-icon>
       <ion-icon *ngIf="homeclick" name="home"></ion-icon>
@@ -21,7 +20,4 @@
       <ion-icon *ngIf="profileclick" name="person-circle"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
-  
-  
-
 </ion-tabs>
