--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -22,6 +22,54 @@ video:before {
     left: 0;
 }
 
+#video-container {
+    width: 100%;
+    position: relative;
+}
+
+#volume-controls {
+    position: absolute;
+    top: calc(0% + 10px);
+    right: calc(0% + 20px);
+    padding: 10px;
+    color: white;
+    background: rgba(0, 0, 0, 0.80);
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#replay-controls {
+    position: absolute;
+    top: calc(50% - 24px);
+    right: calc(50% - 75px);
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 20px;
+    width: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#play-controls {
+    position: absolute;
+    top: calc(0% + 10px);
+    left: calc(0% + 20px);
+    padding: 10px;
+    color: white;
+    background: rgba(0, 0, 0, 0.80);
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 ion-header {
     box-shadow: none !important;
     cursor: pointer;
