--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -29,17 +29,17 @@ video:before {
 
 #volume-controls {
     position: absolute;
-    top: calc(0% + 10px);
-    right: calc(0% + 20px);
-    padding: 10px;
-    color: white;
-    background: rgba(0, 0, 0, 0.80);
+    top: calc(100% - 40px);
+    right: calc(0% + 15px);
+    color: var(--ion-color-light) ;
+    background: rgba(0, 0, 0, 0.70);
     border-radius: 50%;
-    height: 35px;
-    width: 35px;
+    height: 25px;
+    width: 25px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 #replay-controls {
@@ -53,21 +53,26 @@ video:before {
     display: flex;
     flex-direction: row;
     justify-content: center;
+
+    p {
+        margin: 0.5em 1em;
+    }
 }
 
 #play-controls {
     position: absolute;
-    top: calc(0% + 10px);
-    left: calc(0% + 20px);
-    padding: 10px;
-    color: white;
-    background: rgba(0, 0, 0, 0.80);
+    top: calc(100% - 40px);
+    left: calc(0% + 15px);
+    padding: 0px;
+    color: var(--ion-color-light) ;
+    background: rgba(0, 0, 0, 0.70);
     border-radius: 50%;
-    height: 35px;
-    width: 35px;
+    height: 25px;
+    width: 25px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 ion-header {
