--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -40,6 +40,11 @@ video:before {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    ion-icon {
+        width: 15px !important;
+        height: 15px !important;
+    }
 }
 
 #replay-controls {
@@ -73,6 +78,11 @@ video:before {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    ion-icon {
+        width: 15px !important;
+        height: 15px !important;
+    }
 }
 
 ion-header {
