--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -195,7 +195,7 @@ ion-icon {
     }
   }
 
-.postedphotos {
+.postedphotos, .postedvideos {
     .postedphotos_row, .postedvideos_row {
         display: flex;
         flex-direction: row;
@@ -212,11 +212,30 @@ ion-icon {
         background-position: center;
         object-fit: contain;
         aspect-ratio: 1;
+    }
 
-        .video-playing {
-            max-width: 100px;
-            max-height: 100px;
-            background-color: black !important;
+    #video-wrapper {
+        width: 100%;
+        position: relative;
+    }
+    
+    #play-controls {
+        position: absolute;
+        top: calc(50% - 23px);
+        right: calc(50% - 23px);
+        background: rgba(0, 0, 0, 0.70);
+        border-radius: 50%;
+        height: 45px;
+        width: 45px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    
+        ion-icon {
+            width: 25px !important;
+            height: 25px !important;
+            color: var(--ion-color-light) !important;
         }
     }
     
