--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -9,7 +9,7 @@ video {
     width: 100%;
     height: 500px;
     position: relative;
-    object-fit: cover;
+    object-fit: cover !important;
 }
 
 video:before {
@@ -20,11 +20,14 @@ video:before {
     position: absolute;
     top: 0;
     left: 0;
+    object-fit: cover !important;
+    border: none !important;
 }
 
 #video-container {
     width: 100%;
     position: relative;
+    border: none !important;
 }
 
 #volume-controls {
