--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -14,6 +14,11 @@
     }
 }
 
+.separator-toolbar {
+    max-width: 700px;
+    margin: auto;
+}
+
 ion-content{
     display: flex !important;
     justify-content: center !important;
@@ -88,6 +93,7 @@ ion-icon {
     justify-content: space-evenly;
     height: auto;
     margin: 0 auto;
+    max-width: 600px;
 
     .username-header {
         justify-content: center;
