adds object to scss class

--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@300;400;700;900&family=Oleo+Script:wght@700&display=swap');
 
-img {
-    width: 100vw;
-    height: auto;
+.swiper-zoom-container {
+    img {
+        width: 100%;
+        height: 600px;
+        object-fit: cover;
+    }
 }
+
 
 #video-container {
     position: relative;
@@ -20,32 +24,32 @@ img {
         height: 500px;
     }
     
-    // video {
-    //     // width: 100vw;
-    //     height: 500px;
-    //     position: relative;
-    //     object-fit: cover;
-    //     width: 100vw;
-    //     // width: 177.77777778vh;
-    //     // min-width: 100%;
-    //     margin: 0;
-    //     padding: 0;
-    // }
+    video, object {
+        // width: 100vw;
+        height: 500px;
+        // position: relative;
+        object-fit: cover;
+        width: 100vw;
+        // width: 177.77777778vh;
+        // min-width: 100%;
+        margin: 0;
+        padding: 0;
+    }
     
-    // video:before {
-    //     // background: rgba(0, 0, 0, 0.5); /* You can use here image */
-    //     // width: 100vw;
-    //     // height: 500px;
-    //     content: '';
-    //     position: absolute;
-    //     margin: 0;
-    //     padding: 0;
-    //     // top: 0;
-    //     // left: 0;
-    //     // object-fit: cover !important;
-    //     // border: none !important;
+    video:before {
+        // background: rgba(0, 0, 0, 0.5); /* You can use here image */
+        // width: 100vw;
+        // height: 500px;
+        content: '';
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        // top: 0;
+        // left: 0;
+        // object-fit: cover !important;
+        // border: none !important;
     
-    // }
+    }
 }
 
 
