--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -3,8 +3,7 @@
 .swiper-zoom-container {
     img {
         width: 100%;
-        height: 600px;
-        object-fit: cover;
+        height: auto;
     }
 }
 
@@ -14,40 +13,35 @@
     width: 100%;
     height: 500px;
     border: none !important;
+    overflow: hidden;
+    object-fit: cover;
 
     vg-player video {
         object-fit: cover;
         margin: 0;
         padding: 0;
         width: 100vw;
-        // height: 500px;
-        height: auto;
+        height: 500px;
     }
     
     video {
         width: 100vw;
-        // height: 500px;
-        // position: relative;
+        height: 100%;
+        position: relative;
         object-fit: cover;
         margin: 0;
         padding: 0;
-        height: auto;
     }
-    
-    // video:before {
-    //     // background: rgba(0, 0, 0, 0.5); /* You can use here image */
-    //     // width: 100vw;
-    //     // height: 500px;
-    //     content: '';
-    //     position: absolute;
-    //     margin: 0;
-    //     padding: 0;
-    //     // top: 0;
-    //     // left: 0;
-    //     object-fit: cover !important;
-    //     // border: none !important;
-    
-    // }
+
+    video[poster]{
+        height: 500px;
+        width: 100vw;
+        object-fit: cover;
+        position: relative;
+        margin: 0;
+        padding: 0;
+        background: transparent;
+    }
 }
 
 
