--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -32,7 +32,7 @@
         // width: 100vw;
         // height: 100%;
         position: relative;
-        object-fit: cover;
+        // object-fit: cover;
         // margin: 0;
         // padding: 0;
         // display: block;
