--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -16,8 +16,13 @@
     overflow: hidden;
     object-fit: cover;
 
+    vg-player {
+        display: flex;
+        justify-content: center;
+    }
+
     vg-player video {
-        object-fit: cover;
+        object-fit: contain;
         margin: 0;
         padding: 0;
         width: 100vw;
@@ -26,13 +31,13 @@
     
     video {
         max-height: 100%;
-        max-width: 100%;
+        max-width: 100vw;
         min-height: 100%;
-        min-width: 100%;
+        min-width: 100vw;
         // width: 100vw;
         // height: 100%;
         position: relative;
-        // object-fit: cover;
+        object-fit: cover;
         // margin: 0;
         // padding: 0;
         // display: block;
