--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -2,8 +2,8 @@
 
 .swiper-zoom-container {
     img {
-        width: 100%;
-        height: 500px;
+        // width: 100vw;
+        // height: 600px;
     }
 }
 
