finishes for the day

--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -7,6 +7,13 @@
     }
 }
 
+ion-refresher.refresher-active {
+    display: flex;
+    justify-content: center;
+    padding: 2em;
+    z-index: 5;
+}
+
 
 #video-container {
     position: relative;
