--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -3,11 +3,11 @@
 <!-- pull and refresh option at top -->
 <ion-content [fullscreen]="true" [scrollEvents]="true" (ionScroll)="didScroll()" id="wall-content" lines="none" #container>
 
-  <ion-refresher lines="none" slot="fixed" (ionRefresh)="refreshData($event)">
+  <ion-refresher slot="fixed" (ionRefresh)="refreshData($event)">
     <ion-refresher-content
-    pullingIcon="chevron-down-circle-outline"
-    pullingText="Pull to refresh"
-    refreshingSpinner="lines-small">
+    pullingIcon="chevron-down-outline"
+    pullingText="Refresh timeline"
+    refreshingSpinner="lines-sharp-small">
     </ion-refresher-content>
   </ion-refresher>
 
